# healmex

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMatlab.cmake  FindPkgConfig.cmake
contrib/: singularity-ubuntu-20.04.def
matlab/+healmex/: .gitignore  alm2cl.m.in  alm2map.m.in  alm2map_der1.m.in  alm2map_spin.m.in  alm_getidx.m  alm_getlm.m  alm_getlmmax.m  alm_getn.m  almxfl.m.in  ang2pix.m  apodize_mask.m  hpx_apodize_mask.m  hpx_map2alm.m  hpx_map2alm_pol.m  hpx_map2alm_pure.m  hpx_smoothing_pol.m  map2alm.m.in  map2alm_pure.m  map2alm_pure.m.in  map2alm_spin.m.in  mask_bpwf.m  mollview.m.in  neighbors.m  nest2ring.m  nside2npix.m  pix2ang.m  pix2ring.m  pix2vec.m  pix2xyf.m  pix2zphi.m  query_disc.m.in  ring2nest.m  rotate_alm.m.in  smooth_mask.m  smoothing.m  synalm.m.in  vec2pix.m  xyf2pix.m  zphi2pix.m
matlab/@healmex/: .gitignore  alm2cl.m  alm2cl.m.in  alm2map.m  alm2map.m.in  alm2map_der1.m.in  alm2map_pol.m  alm_getidx.m  alm_getlmmax.m  almxfl.m  almxfl.m.in  ang2pix.m  healmex.m  hpx_alm2map.m  hpx_alm2map_pol.m  hpx_alm2map_polonly.m  hpx_map2alm.m  hpx_map2alm_pol.m  hpx_map2alm_pure.m  hpx_rotate_alm.m  hpx_rotate_alm.m.in  hpx_rotate_alm_pol.m  hpx_rotate_alm_pol.m.in  hpx_shrink_mask.m  hpx_smooth_mask.m  hpx_smoothing.m  map2alm.m.in  map2alm_iter.m  map2alm_pol_iter.m  map2alm_pure.m  map2alm_pure.m.in  mask_bpwf.m  nest2ring.m  npix2nside.m  nside2npix.m  pix2ang.m  pix2vec.m  pix2xyf.m  pix2zphi.m  ring2nest.m  (+10 more)
mex/: CMakeLists.txt  libhealmex.cpp  libmcm.cpp
